# mandelbrot

./: Cargo.toml  README.md  config.json
src/: main.rs
src/shaders/: dfragment.glsl  dvertex.glsl  fragment.glsl  vertex.glsl
