[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"



[dependencies]
nalgebra = "0.2.0"
num = "*"
image = "*"
imgui = "0.0.3"

[dependencies.glium]
version = "*"
features = ["nalgebra", "cgmath", "glutin", "image"]
default-features = false
