[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"



[dependencies]
nalgebra = "0.2.0"
image = "*"
imgui = { git = "https://github.com/matklad/imgui-rs" }
time  = "*"

[dependencies.glium]
version = "0.9.3"
features = ["nalgebra", "glutin", "image"]
default-features = false
