[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"



[dependencies]
nalgebra = "0.3"
image = "*"
imgui = { git = "https://github.com/Gekkio/imgui-rs" }
time  = "*"

[dependencies.glium]
version = "0.11"
features = ["nalgebra", "glutin"]
default-features = false
